--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/cli-service": "^3.0.3",
     "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
+    "element-ui": "^2.4.11",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
