--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
+    "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
